# kaggle-ai-agent-security

./: .gitignore  AGENTS.md  README.md  pyproject.toml
competition/: AI Agent Security - Multi-Step Tool Attacks.md  AI Agent Security - Multi-Step Tool Attacks_data.md  AI Agent Security - Multi-Step Tool Attacks_rules.md  overview.md
daily_reports/: 20260613.md  20260614.md  20260615.md  20260616.md  20260617.md  20260618.md  20260619.md  20260620.md  20260621.md  20260622.md  20260623.md  20260624.md  20260625.md  20260626.md  20260627.md  20260628.md  20260629.md  20260701.md  README.md
data/: README.md
references/: README.md
references/knowledge/: INDEX.md  README.md  discussions.md  notebooks.md  sdk_docs.md  strategy.md
scripts/: build_aas_local_validation_kernel.py  measure_candidate_posts.py
src/kaggle_agent_template/: __init__.py
submit/: SUBMISSIONS.md  submissions.csv
submit/v001_wiring_baseline/: README.md  attack.py  kernel-metadata.json
submit/v002_public_reachable/: README.md  attack.py  kernel-metadata.json
submit/v003_broad_prompt_bank/: README.md  attack.py  kernel-metadata.json
submit/v004_trajectory_exfil/: README.md  attack.py  kernel-metadata.json
submit/v005_trajectory_exfil_aggressive/: README.md  attack.py  kernel-metadata.json
submit/v006_trajectory_exfil_multipost/: README.md  attack.py  kernel-metadata.json
submit/v007_fast_aggressive_fill/: README.md  attack.py  kernel-metadata.json
submit/v008_timeout_safe_multipost/: README.md  attack.py  kernel-metadata.json
templates/: daily_report.md
workspace/: README.md
(+263 files in other folders)
