[project]
name = "kaggle-ai-agent-security"
version = "0.1.0"
description = "Workspace helpers for the AI Agent Security Kaggle competition"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "gymnasium>=1.3.0",
  "ipykernel",
  "jupyterlab",
  "kaggle",
  "matplotlib",
  "numpy",
  "pandas",
  "pydantic>=2.13.4",
  "pyyaml",
  "scikit-learn",
  "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pre-commit",
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle_agent_template"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".venv",
  "data",
  "references/raw",
  "workspace/**/results",
  "submit/**/model",
  "submit/**/models",
  "*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
